--- a/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
+++ b/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
@@ -4,9 +4,29 @@
 		<LangVersion>latestMajor</LangVersion>
 
 		<TargetFrameworks>net4.6.2;net6.0;net7.0</TargetFrameworks>
-		<Version>1.0.0</Version>
 		<NoWarn>SYSLIB0014;CS8981;</NoWarn>
+
+		<Version>1.0.2</Version>
+		<Title>ThingsGateway.Foundation</Title>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Authors>Diego</Authors>
+		<Description>ThingsGateway基础通讯库</Description>
+		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<RunAnalyzersDuringBuild>True</RunAnalyzersDuringBuild>
+		<PackageProjectUrl>https://diego2098.gitee.io/thingsgateway/</PackageProjectUrl>
+		<RepositoryUrl>https://gitee.com/diego2098/ThingsGateway</RepositoryUrl>
+		<PackageOutputPath>$(SolutionDir)</PackageOutputPath>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Include="..\..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.39" />
