--- a/src/Plugins/ThingsGateway.Foundation.Tests/ThingsGateway.Foundation.Tests.csproj
+++ b/src/Plugins/ThingsGateway.Foundation.Tests/ThingsGateway.Foundation.Tests.csproj
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ThingsGateway.Foundation.Adapter.Modbus" Version="1.0.1" />
+    <ProjectReference Include="..\ThingsGateway.Foundation.Adapter.Modbus\ThingsGateway.Foundation.Adapter.Modbus.csproj" />
   </ItemGroup>
+
 
 </Project>
