--- a/src/Plugins/ThingsGateway.OPCUA/ThingsGateway.OPCUA.csproj
+++ b/src/Plugins/ThingsGateway.OPCUA/ThingsGateway.OPCUA.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<LangVersion>latestMajor</LangVersion>
@@ -18,16 +18,21 @@
 	</Target>
 
 	<ItemGroup>
+		<None Remove="ImportVariable.razor" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\..\ThingsGateway.Web.Foundation\ThingsGateway.Web.Foundation.csproj">
 			<IncludeAssets>Compile</IncludeAssets>
 		</ProjectReference>
 		<ProjectReference Include="..\ThingsGateway.Foundation.Adapter.OPCUA\ThingsGateway.Foundation.Adapter.OPCUA.csproj">
-			<IncludeAssets>Compile</IncludeAssets>
 		</ProjectReference>
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Client" Version="1.4.371.60" CopyToOutput="true" />
+		<PackageReference Include="Masa.Blazor" Version="1.0.0-preview.8">
+			<IncludeAssets>Compile</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 </Project>
