--- a/src/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
+++ b/src/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
@@ -51,7 +51,7 @@
 
 
 	<ItemGroup>
-	  <ProjectReference Include="..\ThingsGateway.Web.Page\ThingsGateway.Web.Page.csproj" />
+	  <ProjectReference Include="..\ThingsGateway.Web.Rcl\ThingsGateway.Web.Rcl.csproj" />
 	</ItemGroup>
 
 </Project>
