--- a/src/ThingsGateway.Web.Page/ThingsGateway.Web.Page.csproj
+++ b/src/ThingsGateway.Web.Page/ThingsGateway.Web.Page.csproj
@@ -8,7 +8,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\ThingsGateway.Web.Foundation\ThingsGateway.Web.Foundation.csproj" />
-	  <ProjectReference Include="..\ThingsGateway.Web.Rcl\ThingsGateway.Web.Rcl.csproj" />
+	  <ProjectReference Include="..\ThingsGateway.Web.Rcl.Core\ThingsGateway.Web.Rcl.Core.csproj" />
 	</ItemGroup>
 
 
