--- a/src/ThingsGateway.Web.Rcl.Core/ThingsGateway.Web.Rcl.Core.csproj
+++ b/src/ThingsGateway.Web.Rcl.Core/ThingsGateway.Web.Rcl.Core.csproj
@@ -25,6 +25,7 @@
 	<ItemGroup>
 
 		<PackageReference Include="Masa.Blazor" Version="1.0.0-preview.8" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.3" />
 
 	</ItemGroup>
 
