--- a/src/ThingsGateway.Web.Rcl/ThingsGateway.Web.Rcl.csproj
+++ b/src/ThingsGateway.Web.Rcl/ThingsGateway.Web.Rcl.csproj
@@ -7,11 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.3" />
-	</ItemGroup>
-
-
-	<ItemGroup>
+	  <ProjectReference Include="..\ThingsGateway.Web.Page\ThingsGateway.Web.Page.csproj" />
 	  <ProjectReference Include="..\ThingsGateway.Web.Rcl.Core\ThingsGateway.Web.Rcl.Core.csproj" />
 	</ItemGroup>
 
