--- a/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
+++ b/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
@@ -32,6 +32,7 @@
 		<PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.39" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="TouchSocket" Version="1.3.0" />
+		<PackageReference Include="System.IO.Ports" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'=='net4.6.2'">
