--- a/src/Plugins/ThingsGateway.Foundation.Adapter.Modbus/ThingsGateway.Foundation.Adapter.Modbus.csproj
+++ b/src/Plugins/ThingsGateway.Foundation.Adapter.Modbus/ThingsGateway.Foundation.Adapter.Modbus.csproj
@@ -3,11 +3,11 @@
 	<PropertyGroup>
 		<LangVersion>latestMajor</LangVersion>
 		<TargetFrameworks>net4.6.2;net6.0;net7.0</TargetFrameworks>
-		<Version>1.0.3</Version>
+		<Version>1.0.4</Version>
 		<Title>ThingsGateway.Foundation.Adapter.Modbus</Title>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Authors>Diego</Authors>
-		<Description>Modbus通讯类库，支持MdobusTcp;ModbusRtuOverTcp;ModbusTcpServer</Description>
+		<Description>Modbus通讯类库，支持MdobusTcp;ModbusRtu;ModbusRtuOverTcp;ModbusTcpServer</Description>
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<RunAnalyzersDuringBuild>True</RunAnalyzersDuringBuild>
