--- a/src/ThingsGateway.Web.Server/ThingsGateway.Web.Server.csproj
+++ b/src/ThingsGateway.Web.Server/ThingsGateway.Web.Server.csproj
@@ -16,6 +16,7 @@
 
 
 
+	<PropertyGroup Condition=" '$(RunConfiguration)' == 'Kestrel' " />
 	<ItemGroup>
 	  <ProjectReference Include="..\ThingsGateway.Web.Core\ThingsGateway.Web.Core.csproj" />
 	</ItemGroup>
