1、采用异步AutoResetEvent，修复多个设备下采集太慢的问题 2、弃用IntelligentConcurrentQueue(touchsocket集成类)

--- a/src/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
+++ b/src/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
@@ -46,7 +46,7 @@
 
 
 	<ItemGroup>
-	  <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
+	  <!--<PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />-->
 	</ItemGroup>
 
 
