--- a/src/ThingsGateway.Web.Core/Configuration/App.json
+++ b/src/ThingsGateway.Web.Core/Configuration/App.json
@@ -5,8 +5,8 @@
     "LogLevel": {
       "FileDefault": "Information", //程序日志写入文件等级，不包含网关日志
       "RunTimeLogCustom": "Information", //网关运行日志存入数据库等级，部署推荐Error
-      "Default": "Trace", //前提等级
-      "Console": "Trace", //控制台输出日志等级
+      "Default": "Information", //前提等级
+      "Console": "Information", //控制台输出日志等级
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
