--- a/src/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
+++ b/src/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
@@ -46,11 +46,7 @@
 
 
 	<ItemGroup>
-	  <!--<PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />-->
-	</ItemGroup>
-
-
-	<ItemGroup>
+	  <ProjectReference Include="..\ThingsGateway.Web.Page\ThingsGateway.Web.Page.csproj" />
 	  <ProjectReference Include="..\ThingsGateway.Web.Rcl\ThingsGateway.Web.Rcl.csproj" />
 	</ItemGroup>
 
