--- a/src/ThingsGateway.Web.Rcl/ThingsGateway.Web.Rcl.csproj
+++ b/src/ThingsGateway.Web.Rcl/ThingsGateway.Web.Rcl.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\ThingsGateway.Web.Page\ThingsGateway.Web.Page.csproj" />
+	  <ProjectReference Include="..\ThingsGateway.Web.Foundation\ThingsGateway.Web.Foundation.csproj" />
 	  <ProjectReference Include="..\ThingsGateway.Web.Rcl.Core\ThingsGateway.Web.Rcl.Core.csproj" />
 	</ItemGroup>
 
