--- a/src/ThingsGateway.Web.Server/ThingsGateway.Web.Server.csproj
+++ b/src/ThingsGateway.Web.Server/ThingsGateway.Web.Server.csproj
@@ -28,6 +28,12 @@
 
 
 	<ItemGroup>
+	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\linux64_net6.pubxml" />
+	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\linux64_net7.pubxml" />
+	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\win64_net6.pubxml" />
+	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\win64_net7.pubxml" />
+	</ItemGroup>
+	<ItemGroup>
 	  <None Include="pm2-windows.json">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
