--- a/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
+++ b/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
@@ -5,7 +5,7 @@
 
 		<TargetFrameworks>net4.6.2;net6.0;net7.0</TargetFrameworks>
 		<NoWarn>SYSLIB0014;CS8981;</NoWarn>
-		<!--<GenerateDocumentationFile>True</GenerateDocumentationFile>-->
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 
 		<Version>1.2.0</Version>
 		<Title>ThingsGateway.Foundation</Title>
