--- a/src/ThingsGateway.Web.Foundation/ThingsGateway.Web.Foundation.csproj
+++ b/src/ThingsGateway.Web.Foundation/ThingsGateway.Web.Foundation.csproj
@@ -3,13 +3,15 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
-		<Version>1.2.0</Version>
+		<Version>1.2.1</Version>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.39" />
 		<PackageReference Include="Hardware.Info" Version="11.0.0" />
 		<PackageReference Include="CS-Script" Version="4.6.5" />
+		<!--CS-Script与Furion冲突，直接安装覆盖版本-->
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.5.0" />
 	</ItemGroup>
 
