--- a/src/ThingsGateway.Application/ThingsGateway.Application.csproj
+++ b/src/ThingsGateway.Application/ThingsGateway.Application.csproj
@@ -5,7 +5,7 @@
 		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Version>1.2.1</Version>
-		<!--<GenerateDocumentationFile>True</GenerateDocumentationFile>-->
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
