--- a/src/ThingsGateway.Web.Server/ThingsGateway.Web.Server.csproj
+++ b/src/ThingsGateway.Web.Server/ThingsGateway.Web.Server.csproj
@@ -7,7 +7,7 @@
 		<SatelliteResourceLanguages>zh-Hans</SatelliteResourceLanguages>
 		<PublishReadyToRunComposite>true</PublishReadyToRunComposite>
 		<Version>1.2.1</Version>
-		<!--<GenerateDocumentationFile>True</GenerateDocumentationFile>-->
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<ApplicationIcon>favicon.ico</ApplicationIcon>
 		<!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
 	</PropertyGroup>
