历史数据库选择为sqlite时查询转换日期错误

--- a/.gitignore
+++ b/.gitignore
@@ -363,6 +363,7 @@ MigrationBackup/
 FodyWeavers.xsd
 
 /src/ThingsGateway.Web.Server/Default.db
+/src/ThingsGateway.Web.Server/Alarm_history.db
 /src/PluginPro*/
 /src/*Pro*
 /src/TestResults*/
