--- a/.gitignore
+++ b/.gitignore
@@ -362,6 +362,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+/src/Plugins/Other
 /src/ThingsGateway.Web.Server/Default.db
 /src/ThingsGateway.Web.Server/Alarm_history.db
 /src/PluginPro*/
