重启线程WebApi修改

--- a/src/ThingsGateway.Web.Server/ThingsGateway.Web.Server.csproj
+++ b/src/ThingsGateway.Web.Server/ThingsGateway.Web.Server.csproj
@@ -10,7 +10,8 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<ApplicationIcon>favicon.ico</ApplicationIcon>
 		<Configurations>Debug;Release;KINGVIEW</Configurations>
-		<!--<ServerGarbageCollection>false</ServerGarbageCollection>--><!--切换为工作站GC策略-->
+		<!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
+		<!--切换为工作站GC策略-->
 	</PropertyGroup>
 
 
