--- a/src/Plugins/ThingsGateway.Foundation.Adapter.OPCDA/ThingsGateway.Foundation.Adapter.OPCDA.csproj
+++ b/src/Plugins/ThingsGateway.Foundation.Adapter.OPCDA/ThingsGateway.Foundation.Adapter.OPCDA.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<LangVersion>latestMajor</LangVersion>
 		<TargetFrameworks>net4.6.2;net6.0;net7.0</TargetFrameworks>
+		<NoWarn>CA1416;CS8625;1591;</NoWarn>
 		<!--<GenerateDocumentationFile>True</GenerateDocumentationFile>-->
 		<Version>1.5.1</Version>
 		<Platforms>AnyCPU</Platforms>
