--- a/src/ThingsGateway.Core/ThingsGateway.Core.csproj
+++ b/src/ThingsGateway.Core/ThingsGateway.Core.csproj
@@ -6,13 +6,13 @@
 		<Version>1.5.1</Version>
 		<!--<GenerateDocumentationFile>True</GenerateDocumentationFile>-->
 	</PropertyGroup>
- 
+
 	<ItemGroup>
-		<PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="4.8.8.23" />
-		<PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="4.8.8.23" />
-		<PackageReference Include="Furion.Pure" Version="4.8.8.23" />
+		<PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="4.8.8.24" />
+		<PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="4.8.8.24" />
+		<PackageReference Include="Furion.Pure" Version="4.8.8.24" />
 		<PackageReference Include="MiniExcel" Version="1.31.0" />
-		<PackageReference Include="SqlSugarCore" Version="5.1.4.82" />
+		<PackageReference Include="SqlSugarCore" Version="5.1.4.83" />
 		<PackageReference Include="BouncyCastle.NetCore" Version="1.9.0" />
 		<PackageReference Include="NewLife.Core" Version="10.3.2023.601" />
 		<PackageReference Include="UAParser" Version="3.1.47" />
@@ -21,6 +21,7 @@
 		<PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.39" />
 		<PackageReference Include="Hardware.Info" Version="11.1.0" />
 		<PackageReference Include="CS-Script" Version="4.6.5" />
+		<PackageReference Include="IGeekFan.AspNetCore.Knife4jUI" Version="0.0.13" />
 		<!--CS-Script与Furion冲突，直接安装覆盖版本-->
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.6.0" />
 	</ItemGroup>
