--- a/src/ThingsGateway.Web.Server/Properties/launchSettings.json
+++ b/src/ThingsGateway.Web.Server/Properties/launchSettings.json
@@ -2,12 +2,12 @@
   "profiles": {
     "Kestrel": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:7100;https://localhost:7101",
-      "dotnetRunMessages": true
+      "applicationUrl": "http://localhost:7200;https://localhost:7201"
     }
   }
 }
