--- a/src/Plugins/ThingsGateway.Siemens/ThingsGateway.Siemens.csproj
+++ b/src/Plugins/ThingsGateway.Siemens/ThingsGateway.Siemens.csproj
@@ -11,6 +11,7 @@
 		<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
 
 
+		<Platforms>AnyCPU;x86</Platforms>
 	</PropertyGroup>
 
 
