--- a/src/ThingsGateway.Application/ThingsGateway.Application.csproj
+++ b/src/ThingsGateway.Application/ThingsGateway.Application.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Version>1.6.1</Version>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<Platforms>AnyCPU;x86</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
