--- a/src/Plugins/ThingsGateway.Foundation.Tests/ThingsGateway.Foundation.Tests.csproj
+++ b/src/Plugins/ThingsGateway.Foundation.Tests/ThingsGateway.Foundation.Tests.csproj
@@ -8,6 +8,7 @@
 		<IsPackable>false</IsPackable>
 		<Platforms>AnyCPU</Platforms>
 		<Version>1.6.1</Version>
+		<Platforms>AnyCPU;x86</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
