--- a/src/Plugins/ThingsGateway.Modbus/ThingsGateway.Modbus.csproj
+++ b/src/Plugins/ThingsGateway.Modbus/ThingsGateway.Modbus.csproj
@@ -9,6 +9,7 @@
 		<RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
 		<EnableDynamicLoading>true</EnableDynamicLoading>
 		<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+		<Platforms>AnyCPU;x86</Platforms>
 	</PropertyGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
