--- a/src/Plugins/ThingsGateway.OPCUA/ThingsGateway.OPCUA.csproj
+++ b/src/Plugins/ThingsGateway.OPCUA/ThingsGateway.OPCUA.csproj
@@ -9,6 +9,7 @@
 		<RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
 		<EnableDynamicLoading>true</EnableDynamicLoading>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<Platforms>AnyCPU;x86</Platforms>
 	</PropertyGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
