--- a/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
+++ b/src/ThingsGateway.Foundation/ThingsGateway.Foundation.csproj
@@ -19,7 +19,8 @@
 		<RepositoryUrl>https://gitee.com/diego2098/ThingsGateway</RepositoryUrl>
 		<PackageOutputPath>$(SolutionDir)</PackageOutputPath>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		
+		<Platforms>AnyCPU;x86</Platforms>
+
 	</PropertyGroup>
 
 	<ItemGroup>
