--- a/src/ThingsGateway.Web.Rcl.Core/ThingsGateway.Web.Rcl.Core.csproj
+++ b/src/ThingsGateway.Web.Rcl.Core/ThingsGateway.Web.Rcl.Core.csproj
@@ -21,7 +21,7 @@
 
 	<ItemGroup>
 
-		<PackageReference Include="Masa.Blazor" Version="1.0.0-rc.6" />
+		<PackageReference Include="Masa.Blazor" Version="1.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.9" />
 
 	</ItemGroup>
