--- a/framework/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/framework/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -42,6 +42,12 @@
 	  <Content Update="pm2-windows.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
+	  <Content Update="wwwroot\favicon.ico">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </Content>
+	  <Content Update="wwwroot\favicon.png">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </Content>
 	</ItemGroup>
 
 	
