--- a/framework/ThingsGateway.Admin.Blazor.Core/ThingsGateway.Admin.Blazor.Core.csproj
+++ b/framework/ThingsGateway.Admin.Blazor.Core/ThingsGateway.Admin.Blazor.Core.csproj
@@ -18,4 +18,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.9" />
 
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <Content Update="wwwroot\**">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
 </Project>
