--- a/framework/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/framework/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -44,5 +44,10 @@
 	  </Content>
 	</ItemGroup>
 
+	<ItemGroup>
+		<Content Update="wwwroot\**">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 	
 </Project>
