--- a/framework/ThingsGateway.Admin.Blazor.Core/ThingsGateway.Admin.Blazor.Core.csproj
+++ b/framework/ThingsGateway.Admin.Blazor.Core/ThingsGateway.Admin.Blazor.Core.csproj
@@ -19,5 +19,9 @@
 
 	</ItemGroup>
 	
-
+	<ItemGroup>
+	  <Content Update="wwwroot\**">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
 </Project>
