默认不启用单用户登录

--- a/framework/ThingsGateway.Admin.Application/SeedData/Json/sys_config.json
+++ b/framework/ThingsGateway.Admin.Application/SeedData/Json/sys_config.json
@@ -77,7 +77,7 @@
       "Id": "22222222222232",
       "Category": "SYS_CONFIGBASEDEFAULT",
       "ConfigKey": "CONFIG_SINGLE_OPEN",
-      "ConfigValue": "true",
+      "ConfigValue": "false",
       "Remark": "单用户登录开关",
       "SortCode": "10",
       "IsDelete": "false"
