--- a/framework/ThingsGateway.Plugin/ThingsGateway.Modbus/ThingsGateway.Modbus.csproj
+++ b/framework/ThingsGateway.Plugin/ThingsGateway.Modbus/ThingsGateway.Modbus.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<!--<GenerateDocumentationFile>True</GenerateDocumentationFile>-->
+		<EnableDynamicLoading>true</EnableDynamicLoading>
 	</PropertyGroup>
 
 
@@ -12,7 +13,9 @@
 	</Target>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\ThingsGateway.Blazor\ThingsGateway.Blazor.csproj" />
+		<ProjectReference Include="..\..\ThingsGateway.Blazor\ThingsGateway.Blazor.csproj" >
+			<IncludeAssets>Compile</IncludeAssets>
+		</ProjectReference>
 		<ProjectReference Include="..\Foundataion\ThingsGateway.Foundation.Adapter.Modbus\ThingsGateway.Foundation.Adapter.Modbus.csproj" />
 	</ItemGroup>
 
