--- a/framework/ThingsGateway.Plugin/Foundataion/ThingsGateway.Foundation.Adapter.OPCUA/ThingsGateway.Foundation.Adapter.OPCUA.csproj
+++ b/framework/ThingsGateway.Plugin/Foundataion/ThingsGateway.Foundation.Adapter.OPCUA/ThingsGateway.Foundation.Adapter.OPCUA.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Client" Version="1.4.371.96" />
+	  <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Client.ComplexTypes" Version="1.4.371.96" />
 	  <PackageReference Include="OPCFoundation.NetStandard.Opc.Ua.Server" Version="1.4.371.96" />
 	</ItemGroup>
 
