--- a/framework/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
+++ b/framework/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
@@ -5,26 +5,29 @@
 	</PropertyGroup>
 
 
-	
+
 	<ItemGroup>
-	  <Content Include="Configuration\App.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Configuration\Database.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Configuration\JWT.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Configuration\Swagger.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
+		<Content Include="Configuration\App.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Configuration\Database.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Configuration\JWT.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Configuration\Swagger.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
 		<!--Admin-->
-	  <ProjectReference Include="..\ThingsGateway.Admin.ApiController\ThingsGateway.Admin.ApiController.csproj" />
-	  <ProjectReference Include="..\ThingsGateway.Admin.Blazor\ThingsGateway.Admin.Blazor.csproj" />
+		<ProjectReference Include="..\ThingsGateway.Admin.ApiController\ThingsGateway.Admin.ApiController.csproj" />
+		<ProjectReference Include="..\ThingsGateway.Admin.Blazor\ThingsGateway.Admin.Blazor.csproj" />
+
+	</ItemGroup>
+	<ItemGroup Condition="'$(SolutionName)'=='ThingsGateway'">
 		<!--采集网关-->
 		<ProjectReference Include="..\ThingsGateway.ApiController\ThingsGateway.ApiController.csproj" />
 		<ProjectReference Include="..\ThingsGateway.Blazor\ThingsGateway.Blazor.csproj" />
