--- a/framework/ThingsGateway.Plugin/Foundataion/ThingsGateway.Foundation.Adapter.Modbus/ThingsGateway.Foundation.Adapter.Modbus.csproj
+++ b/framework/ThingsGateway.Plugin/Foundataion/ThingsGateway.Foundation.Adapter.Modbus/ThingsGateway.Foundation.Adapter.Modbus.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<!--<GenerateDocumentationFile>True</GenerateDocumentationFile>-->
-		<TargetFrameworks>net45;net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>net45;netstandard2.0;net6.0;net7.0</TargetFrameworks>
 
 	</PropertyGroup>
 	
