--- a/framework/ThingsGateway.Plugin/Foundataion.Demo/ModbusDemo/ModbusDemo.csproj
+++ b/framework/ThingsGateway.Plugin/Foundataion.Demo/ModbusDemo/ModbusDemo.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Foundataion\ThingsGateway.Foundation.Adapter.Modbus\ThingsGateway.Foundation.Adapter.Modbus.csproj" />
+	  <PackageReference Include="ThingsGateway.Foundation.Adapter.Modbus" Version="2.0.9" />
   </ItemGroup>
 
 </Project>
