--- a/framework/ThingsGateway.Plugin/Foundataion.Demo/ModbusDemo/ModbusDemo.csproj
+++ b/framework/ThingsGateway.Plugin/Foundataion.Demo/ModbusDemo/ModbusDemo.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-	  <PackageReference Include="ThingsGateway.Foundation.Adapter.Modbus" Version="2.0.9" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="ThingsGateway.Foundation.Adapter.Modbus" Version="2.0.9" />
+	</ItemGroup>
 
 </Project>
