--- a/framework/ThingsGateway.Plugin/Foundataion.ConsoleTests/ModbusTest/ModbusTest.csproj
+++ b/framework/ThingsGateway.Plugin/Foundataion.ConsoleTests/ModbusTest/ModbusTest.csproj
@@ -7,8 +7,9 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+
 	<ItemGroup>
-		<PackageReference Include="ThingsGateway.Foundation.Adapter.Modbus" Version="2.0.9" />
+	  <ProjectReference Include="..\..\Foundataion\ThingsGateway.Foundation.Adapter.Modbus\ThingsGateway.Foundation.Adapter.Modbus.csproj" />
 	</ItemGroup>
 
 </Project>
