feat：mqttBroker part

--- a/framework/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
+++ b/framework/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
@@ -7,6 +7,9 @@
 
 
 	<ItemGroup>
+		<Content Include="Configuration\ManageGatewayConfig.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 		<Content Include="Configuration\App.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
